license and Cargo.toml update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "opensimplex"
 version = "0.1.0"
 authors = ["Hansihe <hansihe@hansihe.com>"]
+description = "Wrappers for using OpenSimplex from Rust"
+repository = "https://github.com/hansihe/opensimplex.rs"
+readme = "README.md"
+license = "Unlicense"
+
 build = "build.rs"
 
 [dependencies]
